--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME="SPA Treatments Reservation System"
+APP_NAME="SPA Treatments Reservations System"
 APP_ENV=local
-APP_KEY=base64:c9NyPGJP1tUaDC7q592LKRFLnQ9iqwaWzVBdcU1LwC0=
+APP_KEY=base64:29ZoUg3C6nHHPADP9KqWrEbps2mwGBsbx4TPvQXgf7g=
 APP_DEBUG=true
 APP_URL=http://localhost
 
